Thu Jun  5 12:21:06 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (id2ref): valid id should not refer T_VALUE nor T_ICLASS.
	  [ruby-dev:31911]

Wed Jun  4 16:39:56 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (ext/extinit.o): use $(OUTFLAG) as well as other
	  objects.  [ruby-Bugs-14228]

Tue Jun  3 16:13:40 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (yyerror): limit error message length.  [ruby-dev:31848]

	* regex.c (re_mbc_startpos): separated from re_adjust_startpos.

Tue Jun  3 15:27:11 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (os_obj_of, os_each_obj): hide objects to be finalized.
	  [ruby-dev:31810]

Wed Jun  4 19:15:57 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (remove_method): should not remove undef place holder.
	  [ruby-dev:31817]

Tue Jun  3 15:05:48 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (struct rb_exec_arg): proc should be a VALUE.

	* process.c (rb_f_exec): suppress a warning.

	* process.c (rb_detach_process): cast for the platforms where size of
	  pointer differs from size of int.

	* process.c (rb_f_exec, rb_f_system): should not exceptions after
	  fork.  [ruby-core:08262]

Wed May 21 01:32:56 2008  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpservlet/filehandler.rb: should normalize path
	  name in path_info to prevent script disclosure vulnerability on
	  DOSISH filesystems. (fix: CVE-2008-1891)
	  Note: NTFS/FAT filesystem should not be published by the platforms
	  other than Windows. Pathname interpretation (including short
	  filename) is less than perfect.

	* lib/webrick/httpservlet/abstract.rb
	  (WEBrick::HTTPServlet::AbstracServlet#redirect_to_directory_uri):
	  should escape the value of Location: header.

	* lib/webrick/httpservlet/cgi_runner.rb: accept interpreter
	  command line arguments.

Sun May 18 01:57:44 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (isdirsep): backslash is valid path separator on cygwin too.