@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2008-06-05"
 #define RUBY_VERSION_CODE 185
 #define RUBY_RELEASE_CODE 20080605
-#define RUBY_PATCHLEVEL 127
+#define RUBY_PATCHLEVEL 128
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
