@@ -25,6 +25,7 @@
 #include <windows.h>
 #include <winbase.h>
 #include <wincon.h>
+#include <shlobj.h>
 #ifdef __MINGW32__
 #include <mswsock.h>
 #include <mbstring.h>
@@ -385,6 +386,60 @@ exit_handler(void)
     }
 }
 
+static void
+init_env(void)
+{
+    char env[_MAX_PATH];
+    DWORD len;
+    BOOL f;
+    LPITEMIDLIST pidl;
+
+    if (!GetEnvironmentVariable("HOME", env, sizeof(env))) {
+	f = FALSE;
+	if (GetEnvironmentVariable("HOMEDRIVE", env, sizeof(env)))
+	    len = strlen(env);
+	else
+	    len = 0;
+	if (GetEnvironmentVariable("HOMEPATH", env + len, sizeof(env) - len) || len) {
+	    f = TRUE;
+	}
+	else if (GetEnvironmentVariable("USERPROFILE", env, sizeof(env))) {
+	    f = TRUE;
+	}
+	else if (SHGetSpecialFolderLocation(NULL, CSIDL_PERSONAL, &pidl) == 0) {
+	    LPMALLOC alloc;
+	    f = SHGetPathFromIDList(pidl, env);
+	    SHGetMalloc(&alloc);
+	    alloc->lpVtbl->Free(alloc, pidl);
+	    alloc->lpVtbl->Release(alloc);
+	}
+	if (f) {
+	    char *p = env;
+	    while (*p) {
+		if (*p == '\\') *p = '/';
+		p = CharNext(p);
+	    }
+	    if (p - env == 2 && env[1] == ':') {
+		*p++ = '/';
+		*p = 0;
+	    }
+	    SetEnvironmentVariable("HOME", env);
+	}
+    }
+
+    if (!GetEnvironmentVariable("USER", env, sizeof env)) {
+	if (GetEnvironmentVariable("USERNAME", env, sizeof env) ||
+	    GetUserName(env, (len = sizeof env, &len))) {
+	    SetEnvironmentVariable("USER", env);
+	}
+	else {
+	    NTLoginName = "<Unknown>";
+	    return;
+	}
+    }
+    NTLoginName = strdup(env);
+}
+
 //
 // Initialization stuff
 //
@@ -413,6 +468,8 @@ NtInitialize(int *argc, char ***argv)
 
     tzset();
 
+    init_env();
+
     init_stdhandle();
 
     atexit(exit_handler);
@@ -429,21 +486,6 @@ NtInitialize(int *argc, char ***argv)
 char *
 getlogin()
 {
-    char buffer[200];
-    DWORD len = 200;
-    extern char *NTLoginName;
-
-    if (NTLoginName == NULL) {
-	if (GetUserName(buffer, &len)) {
-	    NTLoginName = (char *)malloc(len+1);
-	    if (!NTLoginName) return NULL;
-	    strncpy(NTLoginName, buffer, len);
-	    NTLoginName[len] = '\0';
-	}
-	else {
-	    NTLoginName = "<Unknown>";
-	}
-    }
     return NTLoginName;
 }
 
@@ -1086,10 +1128,9 @@ insert(const char *path, VALUE vinfo)
     if (!tmpcurr) return -1;
     MEMZERO(tmpcurr, NtCmdLineElement, 1);
     tmpcurr->len = strlen(path);
-    tmpcurr->str = (char *)malloc(tmpcurr->len + 1);
+    tmpcurr->str = strdup(path);
     if (!tmpcurr->str) return -1;
     tmpcurr->flags |= NTMALLOC;
-    strcpy(tmpcurr->str, path);
     **tail = tmpcurr;
     *tail = &tmpcurr->next;
 
@@ -1406,8 +1447,7 @@ rb_w32_cmdvector(const char *cmd, char ***vec)
     ptr = buffer + (elements+1) * sizeof(char *);
 
     while (curr = cmdhead) {
-	strncpy (ptr, curr->str, curr->len);
-	ptr[curr->len] = '\0';
+	memcpy(ptr, curr->str, curr->len + 1);
 	*vptr++ = ptr;
 	ptr += curr->len + 1;
 	cmdhead = curr->next;
@@ -1859,7 +1899,7 @@ rb_w32_strerror(int e)
 	    e = GetLastError();
 	if (FormatMessage(FORMAT_MESSAGE_FROM_SYSTEM |
 			  FORMAT_MESSAGE_IGNORE_INSERTS, &source, e, 0,
-			  buffer, 512, NULL) == 0) {
+			  buffer, sizeof(buffer), NULL) == 0) {
 	    strcpy(buffer, "Unknown Error");
 	}
     }
